tests/agl/rejections/type/strict_json_on_text_codec.agl
let x = prompt[strict_json: true] "Question."
